[project]
name = "llmeng"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "gradio>=5.49.1",
    "ipython>=9.6.0",
    "openai>=2.6.1",
    "requests>=2.32.5",
    "tiktoken>=0.12.0",
]
